--- a/style.css
+++ b/style.css
@@ -531,7 +531,7 @@ button:focus {
 
 .mu-resume-btn:hover,
 .mu-resume-btn:focus {
-  color: whitesmoke;
+  color: black;
 }
 
 /*--------------------*/
