--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ button:focus {
 }
 
 .mu-testimonials-area h2 {
-  color: blue;
+  color: black;
   text-align: center;
 }
 
@@ -816,7 +816,7 @@ button:focus {
 }
 
 .mu-testimonial-slide li .mu-quote-icon {
-  color: blue;
+  color: black;
   font-size: 16px;
   border: 1px solid #fff;
   border-radius: 50%;
@@ -827,13 +827,13 @@ button:focus {
 }
 
 .mu-testimonial-slide li p {
-  color: blue;
+  color: black;
   font-size: 16px;
 }
 
 .mu-ct-name {
   margin-bottom: 5px;
-  color: blue;
+  color: black;
   line-height: 1;
   text-transform: uppercase;
   margin-top: 30px;
